--- a/exceladdins/index.htm
+++ b/exceladdins/index.htm
@@ -30,19 +30,12 @@ pageTracker._trackPageview();
 </div>
 <div id="sitenav">
 <h4><font color="#000000">Menu</font></h4>
-<a href="http://www.depauw.edu/learn/macroexcel/exceladdins/index.htm">Excel Add-ins</a>
-<a href="http://www.depauw.edu/learn/macroexcel/excelworkbooks/index.htm">Excel Workbooks</a>
-<a href="http://www.depauw.edu/learn/macroexcel/screencasts/index.htm">Screencasts</a>
-<a href="http://www.depauw.edu/learn/macroexcel/coursematerials/index.htm">Course Materials</a>
-<a href="http://www.depauw.edu/learn/macroexcel/workshop/index.htm">Teaching Workshop</a>
-<a href="http://www.depauw.edu/learn/macroexcel/buy/index.htm">Buy the Book</a>
-<a href="http://www.depauw.edu/learn/macroexcel/updateshelp/index.htm">Updates and Help</a>
-<!-- <div class="sublinks" id="sub-chapters"></div>
-<a href="http://www.depauw.edu/learn/stata/Data/index.htm">DATA</a>
-<div class="sublinks" id="sub-addins"></div>
-<a href="http://www.depauw.edu/learn/stata/Workshop/index.htm">WORKSHOP</a>-->
-<a href="http://www.depauw.edu/learn/macroexcel/index.htm">Site Home</a></div><!-- This </div> closes the div at the beginning of this menu, <div id="sitenav"> -->
-<div id="main"> 
+<a href="https://barretoh.github.io/GitHubmacro/exceladdins/index.htm">Excel Add-ins</a>
+<a href="https://barretoh.github.io/GitHubmacro/excelworkbooks/index.htm">Excel Workbooks</a>
+<a href="https://barretoh.github.io/GitHubmacro/screencasts/index.htm">Screencasts</a>
+<a href="https://barretoh.github.io/GitHubmacro/coursematerials/index.htm">Course Materials</a>
+<a href="https://barretoh.github.io/GitHubmacro/index.htm">Site Home</a></div><!-- This </div> closes the div at the beginning of this menu, <div id="sitenav"> -->
+<div id="main">  
   <h3>Excel Add-ins</h3>
   <p>Add-ins are special files that provide  additional functionality. After downloading an add-in file, the Add-ins  Manager must be used to install it. Add-ins files have extension .xla or .xlam (for Excel 2007 and newer).</p>
   <p>Currently Available:</p>
@@ -54,13 +47,12 @@ pageTracker._trackPageview();
   </ul>
   <p>&nbsp;</p>
   <h4><a name="EconChart"></a>Econ Chart Enhancer</h4>
-  <p><a href="EconChart.xla">Click this link to download the EconChart.xla file to your computer and use Excel's Addins Manager to install it.</a></p>
+  <p><a href="https://drive.google.com/file/d/1zWsygg45vcQZEtB5EnH2nYqxgj3OYVKs/view?usp=drive_link">Click this link to download the EconChart.xla file to your computer and use Excel's Addins Manager to install it.</a></p>
   <p><em>Description and Installation</em></p>
 <p>The Econ Chart Enhancer add-in has options for various tweaks to an existing chart, including adding shaded bars (for recessions), using a natural log scale, 
     and fitting an exponential growth curve. While a knowledgeable Excel user could do these things on her own, this add-in saves a lot of tedious work.</p>
-<p>The Econ Chart Enhancer add-in was last updated in <span class="style1">June 2015</span>. If you want to update it, please email me.</p>
+<p>The Econ Chart Enhancer add-in was last updated in <span class="style1">June 2015</span>. If it does not work and you want to update it, please email me.</p>
 <a href="https://vimeo.com/39337706" target="_blank"> Click here to see a short video on how to to install it (after clicking above to download it).</a>
-  <p>If you have any trouble, visit the <a href="../updateshelp/index.htm">Help page</a>.</p>
   <h4><a name="ScenCS"></a>Scenario Comparative Statics</h4>
   <p><a href="ScenCS.xla">Click this link to download the ScenCS.xla file to your computer and use Excel's Add-in Manager to install it.</a></p>
   <p><em>Description and Use</em></p>
@@ -77,11 +69,11 @@ The FRED Excel add-in has been updated and is now available through the App Stor
 <p>FRED also has <a href="http://research.stlouisfed.org/fred-mobile/" target="_blank">apps</a> for phones and tablets. (Brilliant!)</p>
 
 <h4><a name="LFRED"></a>LEGACY FRED Excel Add-in</h4>
-If you want the older, better (crazy, I know) version, click on the link below to download an October 2, 2020 version of FRED.xlam that is installed with the Add-in Manager:<p>
-<a href="fred.xlam">Click to download FRED.xlam</a>
+If you want the older, better (crazy, I know) version, click on the link below to download an older version of FRED.xlam that is installed with the Add-in Manager:<p>
+<a href="https://barretoh.github.io/busanalytics/exceladdins/FRED.xlam">Click to download FRED.xlam</a>
 <p>For printed documentation for this LEGACY FRED version (including a quick start guide), see <a href="http://research.stlouisfed.org/fred-addin/FRED_PC_Users_Guide.pdf" target="_blank">research.stlouisfed.org/fred-addin/FRED_PC_Users_Guide.pdf</a>. </p>
 
-<p><a href="../excelworkbooks/Data/Housing.xls">Housing.xls</a> is an Excel workbook that shows how to use the FRED add-in. 
+<p><a href="https://docs.google.com/spreadsheets/d/1YLp7tyEk89F30XYFLP2guuEdJfK7dLPC/edit?usp=drive_link&ouid=104403118775655301638&rtpof=true&sd=true">Housing.xls</a> is an Excel workbook that shows how to use the FRED add-in. 
 </p>
   <a href="https://vimeo.com/63118418" target="_blank"> Click here to see a screencast on how to use the FRED Excel add-in (also included in the Excel workbook).</a>
 </div>
