--- a/excelworkbooks/index.htm
+++ b/excelworkbooks/index.htm
@@ -36,9 +36,7 @@
   <p><a href="Charting/RecessionChart.xls">RecessionChart.xls</a>: uses the EconChart.xla add-in to enhance an oil price chart by adding shaded regions for recessions and applies shaded areas to a chart of USincome inequality.</p>
   <p>&nbsp;</p>
   <h4><a name="Maddison"></a>2. Economic Growth Literacy</h4>
-  <p><a href="MaddisonData.xls">MaddisonData.xls</a>:a macro-enhanced Excel workbook of Maddison&rsquo;s <em>World Economy</em> data that enables easy comparison  of countries over time. See also the<em> JEE</em> <a href="http://www.depauw.edu/learn/introeconlab/lab10.htm" target="_blank">Intro Econ Labs</a> version.
-  This workbook is an excellent way to introduce fundamental questions about economic growth.</p>
-  <p>&nbsp;</p>
+  <p><a href="MaddisonData.xls">MaddisonData.xls</a>:a macro-enhanced Excel workbook of Maddison&rsquo;s <em>World Economy</em> data that enables easy comparison  of countries over time. </p>
   <h4><a name="Solow"></a>3. Solow Model</h4>
 <p>	These workbooks simulate an economy and display time paths and Solow's canonical diagram to explain the steady-state. They enable comparative statics analyses and handle sophisticated transitional dynamics (such as the Golden Rule). Important concepts such as convergence catch-up growth are made accessible. They are meant to be done in sequential order. </p>
 <ol>
