--- a/exceladdins/index.htm
+++ b/exceladdins/index.htm
@@ -34,7 +34,9 @@ pageTracker._trackPageview();
 <a href="https://barretoh.github.io/GitHubmacro/excelworkbooks/index.htm">Excel Workbooks</a>
 <a href="https://barretoh.github.io/GitHubmacro/screencasts/index.htm">Screencasts</a>
 <a href="https://barretoh.github.io/GitHubmacro/coursematerials/index.htm">Course Materials</a>
-<a href="https://barretoh.github.io/GitHubmacro/index.htm">Site Home</a></div><!-- This </div> closes the div at the beginning of this menu, <div id="sitenav"> -->
+<a href="https://barretoh.github.io/GitHubmacro/index.htm">Site Home</a>
+<a href="https://barretoh.github.io/homepage/" target="_blank">HB Homepage</a>
+</div><!-- This </div> closes the div at the beginning of this menu, <div id="sitenav"> -->
 <div id="main">  
   <h3>Excel Add-ins</h3>
   <p>Add-ins are special files that provide  additional functionality. After downloading an add-in file, the Add-ins  Manager must be used to install it. Add-ins files have extension .xla or .xlam (for Excel 2007 and newer).</p>
