--- a/excelworkbooks/index.htm
+++ b/excelworkbooks/index.htm
@@ -26,7 +26,9 @@
 <a href="https://barretoh.github.io/GitHubmacro/excelworkbooks/index.htm">Excel Workbooks</a>
 <a href="https://barretoh.github.io/GitHubmacro/screencasts/index.htm">Screencasts</a>
 <a href="https://barretoh.github.io/GitHubmacro/coursematerials/index.htm">Course Materials</a>
-<a href="https://barretoh.github.io/GitHubmacro/index.htm">Site Home</a></div><!-- This </div> closes the div at the beginning of this menu, <div id="sitenav"> -->
+<a href="https://barretoh.github.io/GitHubmacro/index.htm">Site Home</a>
+<a href="https://barretoh.github.io/homepage/" target="_blank">HB Homepage</a>
+</div><!-- This </div> closes the div at the beginning of this menu, <div id="sitenav"> -->
 <div id="main"> 
   <h3>Excel Workbooks</h3>
   <p>Click to download a workbook and open in Excel; make sure to <span class="Red"><em>enable macros</em></span> for full functionality. The workbooks contain screencasts that explain what to do and include tasks that  can be assigned. These workbooks are entirely self-contained--the workbook includes within it everything the student needs.</p>
