--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,9 @@
 <a href="https://barretoh.github.io/GitHubmacro/excelworkbooks/index.htm">Excel Workbooks</a>
 <a href="https://barretoh.github.io/GitHubmacro/screencasts/index.htm">Screencasts</a>
 <a href="https://barretoh.github.io/GitHubmacro/coursematerials/index.htm">Course Materials</a>
-<a href="https://barretoh.github.io/GitHubmacro/index.htm">Site Home</a></div><!-- This </div> closes the div at the beginning of this menu, <div id="sitenav"> -->
+<a href="https://barretoh.github.io/GitHubmacro/index.htm">Site Home</a>
+<a href="https://barretoh.github.io/homepage/" target="_blank">HB Homepage</a>
+</div><!-- This </div> closes the div at the beginning of this menu, <div id="sitenav"> -->
 <div id="main"> 
   <h3>Welcome</h3>
   <p><img src="buy/jacket.gif" alt="Jacket" width="180" height="257"></p>
