--- a/screencasts/index.htm
+++ b/screencasts/index.htm
@@ -19,7 +19,9 @@
 <a href="https://barretoh.github.io/GitHubmacro/excelworkbooks/index.htm">Excel Workbooks</a>
 <a href="https://barretoh.github.io/GitHubmacro/screencasts/index.htm">Screencasts</a>
 <a href="https://barretoh.github.io/GitHubmacro/coursematerials/index.htm">Course Materials</a>
-<a href="https://barretoh.github.io/GitHubmacro/index.htm">Site Home</a></div><!-- This </div> closes the div at the beginning of this menu, <div id="sitenav"> -->
+<a href="https://barretoh.github.io/GitHubmacro/index.htm">Site Home</a>
+<a href="https://barretoh.github.io/homepage/" target="_blank">HB Homepage</a>
+</div><!-- This </div> closes the div at the beginning of this menu, <div id="sitenav"> -->
 <div id="main">   <h3>Screencasts</h3>
   <p>Each Excel workbook contains links to screencasts streamed from vimeo.com. </p>
   <p>All screencasts are aggregated into a <a href="https://vimeo.com/channels/macroexcel">Macroeconomics with Excel channel</a> (which is initially organized in the order listed below and is sortable and searchable), but it can be a chore to find a particular video. Thus, below  is a complete listing of every screencast, organized by workbook, with a brief description. Click to view or select the link and copy to send it to someone.</p>
