--- a/coursematerials/index.htm
+++ b/coursematerials/index.htm
@@ -20,7 +20,9 @@
 <a href="https://barretoh.github.io/GitHubmacro/excelworkbooks/index.htm">Excel Workbooks</a>
 <a href="https://barretoh.github.io/GitHubmacro/screencasts/index.htm">Screencasts</a>
 <a href="https://barretoh.github.io/GitHubmacro/coursematerials/index.htm">Course Materials</a>
-<a href="https://barretoh.github.io/GitHubmacro/index.htm">Site Home</a></div><!-- This </div> closes the div at the beginning of this menu, <div id="sitenav"> -->
+<a href="https://barretoh.github.io/GitHubmacro/index.htm">Site Home</a>
+<a href="https://barretoh.github.io/homepage/" target="_blank">HB Homepage</a>
+</div><!-- This </div> closes the div at the beginning of this menu, <div id="sitenav"> -->
 <div id="main">   <h3>Course Materials</h3>
   <p>Download the files below and modify as needed.</p>
   <p><a href="SyllabusS14.doc">Course syllabus from Spring 2014</a> (Word doc)</p>
